# WatchApp

./: main.py  pyproject.toml
static/: manifest.json  style.css
web/: index.html
