[tool.poetry]
name = "repl_python3_WatchApp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gevent = "^21.1.2"
flask = "^1.1.2"
flask-mobility = "^1.1.0"
flask-talisman = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
